# athena-project-template

./: LICENSE-MIT  README.md
program/: Cargo.toml
program/elf/: fibonacci-program  riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
