[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "execute"

[[bin]]
name = "execute"
path = "src/bin/execute.rs"

[dependencies]
athena-sdk = { git = "https://github.com/athenavm/athena.git", branch = "main" }
clap = { version = "4.0", features = ["derive", "env"] }
tracing-subscriber = "0.3.18"

[build-dependencies]
athena-helper = { git = "https://github.com/athenavm/athena.git", branch = "main" }
